fix(core): approve applications order
Sort application before approving.
First, approve applications to VOs and then to groups.